infra/k8s/argoCD/frontend/resources/frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    app: taskqueue-frontend
